--- a/app/src/main/res/drawable/bg_radius_5.xml
+++ b/app/src/main/res/drawable/bg_radius_5.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/grey" />
+    <solid android:color="@color/color_wild_sand" />
 
     <corners android:radius="@dimen/radius_5" />
 
